--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -17,8 +17,8 @@
 <!-- smartling.entity_escaping = false -->
 <!-- smartling.instruction_attributes = instruction -->
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="appName" translatable="false">DuckDuckGo</string>
-    <string name="appDescription" translatable="false">DuckDuckGo</string>
+    <string name="appName">DuckDuckGo</string>
+    <string name="appDescription">DuckDuckGo</string>
     <string name="duckDuckGoLogoDescription">Logotip DuckDuckGo</string>
     <string name="duckDuckGoPrivacySimplified">Zaštita privatnosti na jednostavniji način</string>
     <string name="yes">Da</string>
@@ -89,6 +89,7 @@
     <string name="autocompleteRemoveItemTitle">Ukloni prijedlog za pretraživanje?</string>
     <string name="autocompleteRemoveItemCancel">Odustani</string>
     <string name="autocompleteRemoveItemRemove">Ukloni</string>
+    <string name="autocompleteSwitchToTab" instruction="Placeholder is a website">Prebaci se na karticu · %1$s</string>
 
     <!-- Opening external apps -->
     <string name="openExternalApp">Otvori vanjsku aplikaciju</string>
