--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -17,8 +17,8 @@
 <!-- smartling.entity_escaping = false -->
 <!-- smartling.instruction_attributes = instruction -->
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="appName" translatable="false">DuckDuckGo</string>
-    <string name="appDescription" translatable="false">DuckDuckGo</string>
+    <string name="appName">DuckDuckGo</string>
+    <string name="appDescription">DuckDuckGo</string>
     <string name="duckDuckGoLogoDescription">DuckDuckGo logó</string>
     <string name="duckDuckGoPrivacySimplified">Adatvédelem, leegyszerűsítve</string>
     <string name="yes">Igen</string>
@@ -89,6 +89,7 @@
     <string name="autocompleteRemoveItemTitle">Eltávolítod a keresési javaslatot?</string>
     <string name="autocompleteRemoveItemCancel">Mégsem</string>
     <string name="autocompleteRemoveItemRemove">Eltávolítás</string>
+    <string name="autocompleteSwitchToTab" instruction="Placeholder is a website">Váltás lapra · %1$s</string>
 
     <!-- Opening external apps -->
     <string name="openExternalApp">Külső alkalmazás megnyitása</string>
