--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -17,8 +17,8 @@
 <!-- smartling.entity_escaping = false -->
 <!-- smartling.instruction_attributes = instruction -->
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="appName" translatable="false">DuckDuckGo</string>
-    <string name="appDescription" translatable="false">DuckDuckGo</string>
+    <string name="appName">DuckDuckGo</string>
+    <string name="appDescription">DuckDuckGo</string>
     <string name="duckDuckGoLogoDescription">Логотип DuckDuckGo</string>
     <string name="duckDuckGoPrivacySimplified">Максимум конфиденциальности, минимум усилий</string>
     <string name="yes">Да</string>
@@ -89,6 +89,7 @@
     <string name="autocompleteRemoveItemTitle">Удалить поисковую рекомендацию?</string>
     <string name="autocompleteRemoveItemCancel">Отменить</string>
     <string name="autocompleteRemoveItemRemove">Удалить</string>
+    <string name="autocompleteSwitchToTab" instruction="Placeholder is a website">Перейти на вкладку · %1$s</string>
 
     <!-- Opening external apps -->
     <string name="openExternalApp">Открыть внешнее приложение</string>
