--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -17,8 +17,8 @@
 <!-- smartling.entity_escaping = false -->
 <!-- smartling.instruction_attributes = instruction -->
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="appName" translatable="false">DuckDuckGo</string>
-    <string name="appDescription" translatable="false">DuckDuckGo</string>
+    <string name="appName">DuckDuckGo</string>
+    <string name="appDescription">DuckDuckGo</string>
     <string name="duckDuckGoLogoDescription">DuckDuckGo logo</string>
     <string name="duckDuckGoPrivacySimplified">Privaatsus, lihtsustatud</string>
     <string name="yes">Jah</string>
@@ -89,6 +89,7 @@
     <string name="autocompleteRemoveItemTitle">Kas eemaldada otsingusoovitus?</string>
     <string name="autocompleteRemoveItemCancel">Loobu</string>
     <string name="autocompleteRemoveItemRemove">Eemaldage</string>
+    <string name="autocompleteSwitchToTab" instruction="Placeholder is a website">Vaheta vahekaardile · %1$s</string>
 
     <!-- Opening external apps -->
     <string name="openExternalApp">Ava väline rakendus</string>
