--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -17,8 +17,8 @@
 <!-- smartling.entity_escaping = false -->
 <!-- smartling.instruction_attributes = instruction -->
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="appName" translatable="false">DuckDuckGo</string>
-    <string name="appDescription" translatable="false">DuckDuckGo</string>
+    <string name="appName">„DuckDuckGo“</string>
+    <string name="appDescription">„DuckDuckGo“</string>
     <string name="duckDuckGoLogoDescription">„DuckDuckGo“ logotipas</string>
     <string name="duckDuckGoPrivacySimplified">Privatumas, paprasčiau</string>
     <string name="yes">Taip</string>
@@ -89,6 +89,7 @@
     <string name="autocompleteRemoveItemTitle">Pašalinti paieškos pasiūlymą?</string>
     <string name="autocompleteRemoveItemCancel">Atšaukti</string>
     <string name="autocompleteRemoveItemRemove">Pašalinti</string>
+    <string name="autocompleteSwitchToTab" instruction="Placeholder is a website">Perjungti į skirtuką · %1$s</string>
 
     <!-- Opening external apps -->
     <string name="openExternalApp">Atidaryti išorinę programą</string>
