--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -17,8 +17,8 @@
 <!-- smartling.entity_escaping = false -->
 <!-- smartling.instruction_attributes = instruction -->
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="appName" translatable="false">DuckDuckGo</string>
-    <string name="appDescription" translatable="false">DuckDuckGo</string>
+    <string name="appName">DuckDuckGo</string>
+    <string name="appDescription">DuckDuckGo</string>
     <string name="duckDuckGoLogoDescription">Logo DuckDuckGo</string>
     <string name="duckDuckGoPrivacySimplified">Privacy, vereenvoudigd</string>
     <string name="yes">Ja</string>
@@ -89,6 +89,7 @@
     <string name="autocompleteRemoveItemTitle">Zoeksuggestie verwijderen?</string>
     <string name="autocompleteRemoveItemCancel">Annuleren</string>
     <string name="autocompleteRemoveItemRemove">Verwijderen</string>
+    <string name="autocompleteSwitchToTab" instruction="Placeholder is a website">Overschakelen naar tabblad · %1$s</string>
 
     <!-- Opening external apps -->
     <string name="openExternalApp">Externe app openen</string>
