Translate strings to values-it

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -89,6 +89,7 @@
     <string name="autocompleteRemoveItemTitle">Rimuovere il suggerimento di ricerca?</string>
     <string name="autocompleteRemoveItemCancel">Annulla</string>
     <string name="autocompleteRemoveItemRemove">Rimuovi</string>
+    <string name="autocompleteSwitchToTab" instruction="Placeholder is a website">Passa alla scheda · %1$s</string>
 
     <!-- Opening external apps -->
     <string name="openExternalApp">Apri l\'app esterna</string>
