--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -89,6 +89,7 @@
     <string name="autocompleteRemoveItemTitle">Suchvorschlag entfernen?</string>
     <string name="autocompleteRemoveItemCancel">Abbrechen</string>
     <string name="autocompleteRemoveItemRemove">Entfernen</string>
+    <string name="autocompleteSwitchToTab" instruction="Placeholder is a website">Zu Tab wechseln · %1$s</string>
 
     <!-- Opening external apps -->
     <string name="openExternalApp">Externe App öffnen</string>
