Translate strings to values-hr Translate strings to values-pt

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -20,7 +20,7 @@
     <string name="appName" translatable="false">DuckDuckGo</string>
     <string name="appDescription" translatable="false">DuckDuckGo</string>
     <string name="duckDuckGoLogoDescription">Logótipo do DuckDuckGo</string>
-    <string name="duckDuckGoPrivacySimplified">Privacidade, simplificada</string>
+    <string name="duckDuckGoTagline">A tua proteção, a nossa prioridade.</string>
     <string name="yes">Sim</string>
     <string name="no">Não</string>
     <string name="open">Abrir</string>
