Translate strings to values-hu

--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -20,7 +20,7 @@
     <string name="appName" translatable="false">DuckDuckGo</string>
     <string name="appDescription" translatable="false">DuckDuckGo</string>
     <string name="duckDuckGoLogoDescription">DuckDuckGo logó</string>
-    <string name="duckDuckGoPrivacySimplified">Adatvédelem, leegyszerűsítve</string>
+    <string name="duckDuckGoTagline">A prioritásunk, hogy megvédjünk téged.</string>
     <string name="yes">Igen</string>
     <string name="no">Nem</string>
     <string name="open">Megnyitás</string>
